--- a/clients.properties
+++ b/clients.properties
@@ -1,3 +1,7 @@
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
+spring.rabbitmq.host=39.107.141.29
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
