--- a/clients.properties
+++ b/clients.properties
@@ -5,3 +5,4 @@ spring.rabbitmq.host=39.107.141.29
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.cloud.config.fail-fast=true
